# movie-picker

./: .gitignore  README.md  WARP.md  enrich.sh  env.example  history.txt  init_project.py  metadata_enricher.py  moviepicker.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_advanced_filtering.py  test_api_endpoints.py
.github/workflows/: ci.yml
data/: moviepicker.db
data/movies/: plex_movies_enriched.json  plex_movies_final.json  standardized_movies_enriched.json  standardized_movies_final.json
docs/superpowers/specs/_pending/: 2026-05-04-moviepicker-aiml-resume-notes.md
src/: __init__.py
src/api/: tmdb_client.py
src/core/: database.py  filters.py  migrations.py  models.py  movie_manager.py  recommendation.py
src/ui/: cli_interface.py
src/utils/: config.py  logger.py
tests/: conftest.py  test_cli_interface.py  test_movie_manager.py  test_movie_manager_integration.py  test_tmdb_integration.py
web/: main.py
web/frontend/: README.md  index.html  package.json  tailwind.config.js
web/frontend/src/: App.tsx  index.css  main.tsx
web/frontend/src/components/: Header.tsx  MovieCard.tsx  MovieGrid.tsx
web/frontend/src/pages/: HomePage.tsx  MovieDetailPage.tsx  MoviesPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  SettingsPage.tsx
web/frontend/src/services/: api.ts
web/frontend/src/types/: index.ts
web/frontend/src/utils/: format.ts
web/routers/: __init__.py  movies.py  recommendations.py  users.py
